--- a/greet.html
+++ b/greet.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Hello</h1> 
-   <p>This is paragraph</p>
-   
+    <h1>Hello... this is greet file</h1>
 </body>
 </html>
